# python-project-lvl2

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  codecoverage.yml  linter-and-tests.yml  linter.yml  tests.yml
gendiff/: __init__.py  dict_comparison.py  generate_diff.py  json_formatter.py  make_diff.py  parse_files.py  plain_formatter.py  sort_files.py  stylish.py  stylish_formatter.py
gendiff/scripts/: gendiff.py  gendiff_script.py
tests/: test_nested_json.py  test_nested_yaml.py  test_plain_json.py  test_plain_yaml.py
tests/fixtures/: assertion_string_formatter_json.txt
